--- a/FitnessTracker.V1/Components/PagePrincipal/HeaderDuolingo.razor
+++ b/FitnessTracker.V1/Components/PagePrincipal/HeaderDuolingo.razor
@@ -4,7 +4,7 @@
 @inject GamificationDbService GamificationDbService
 @inject SupabaseService2 SupabaseService
 
-<div class="duo-header">
+<div class="duo-header full-width">
     @if (AuthService.IsAuthenticated)
     {
         <div class="profile-section">
