--- a/FitnessTracker.V1/Layout/MainLayout.razor
+++ b/FitnessTracker.V1/Layout/MainLayout.razor
@@ -49,7 +49,7 @@
             </a>
         }
     </div> *@
-    <FitnessTracker.V1.Components.PagePrincipal.HeaderDuolingo></FitnessTracker.V1.Components.PagePrincipal.HeaderDuolingo>
+    @* <FitnessTracker.V1.Components.PagePrincipal.HeaderDuolingo></FitnessTracker.V1.Components.PagePrincipal.HeaderDuolingo> *@
     <main class="app-main">
         @Body
     </main>
