--- a/FitnessTracker.V1/Pages/PrincipalPage/ViewProgramme.razor
+++ b/FitnessTracker.V1/Pages/PrincipalPage/ViewProgramme.razor
@@ -14,7 +14,7 @@
         <div class="greeting-text">Salut 👋</div>
         <div class="greeting-subtext">Prêt pour ton entraînement ?</div>
     </div> *@
-
+<FitnessTracker.V1.Components.PagePrincipal.HeaderDuolingo/>
 <div class="section-container">
     <div class="section-title">📚 Mes Programmes</div>
 </div>
