--- a/FitnessTracker.V1/Pages/PrincipalPage/ViewProgramme.razor
+++ b/FitnessTracker.V1/Pages/PrincipalPage/ViewProgramme.razor
@@ -84,7 +84,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        Gamification = await GamificationDbService.GetGamificationAsync();
+        Gamification = await GamificationDbService.GetOrCreateGamificationAsync();
         Programmes = await SupabaseService.GetAllProgrammesForCurrentUserAsync();
         var data = await LocalStorage.GetItemAsync<string>("seancesCompletes");
         if (!string.IsNullOrEmpty(data))
