--- a/FitnessTracker.V1/Components/PagePrincipal/HeaderDuolingo.razor
+++ b/FitnessTracker.V1/Components/PagePrincipal/HeaderDuolingo.razor
@@ -42,7 +42,7 @@
         }
         if (AuthService.IsAuthenticated && ShowGamification)
         {
-            Gamification = await GamificationDbService.GetGamificationAsync();
+            Gamification = await GamificationDbService.GetOrCreateGamificationAsync();
         }
     }
 }
