--- a/FitnessTracker.V1/Pages/PrincipalPage/ViewProgramme.razor
+++ b/FitnessTracker.V1/Pages/PrincipalPage/ViewProgramme.razor
@@ -7,6 +7,7 @@
 @inject Blazored.LocalStorage.ILocalStorageService LocalStorage
 @inject FitnessTracker.V1.Models.AppState appState
 
+
 @inject GamificationDbService GamificationDbService
 @* <div class="mobile-container"> *@
 @* 
@@ -84,6 +85,19 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        var restored = await SupabaseService.LoadSessionAsync();
+        Console.WriteLine($"🟢 Session restaurée : {restored}");
+        if (!restored)
+        {
+            Console.WriteLine("❌ Session non restaurée ➡️ Redirection vers connexion");
+            Nav.NavigateTo("/login", true);
+            return;
+        }
+
+        var userId = SupabaseService.GetCurrentUserId();
+        Console.WriteLine($"🟣 UserID récupéré : {userId}");
+       
+
         Gamification = await GamificationDbService.GetOrCreateGamificationAsync();
         Programmes = await SupabaseService.GetAllProgrammesForCurrentUserAsync();
         var data = await LocalStorage.GetItemAsync<string>("seancesCompletes");
