--- a/FitnessTracker.V1/Pages/PrincipalPage/Analyse2.razor
+++ b/FitnessTracker.V1/Pages/PrincipalPage/Analyse2.razor
@@ -1,11 +1,12 @@
 ﻿@page "/analyse"
 @using FitnessTracker.V1.Components.Graphique
 @using FitnessTracker.V1.Models.Gamification
+@using FitnessTracker.V1.Services.Data
 @inject PoidsService PoidsService
 @inject ProgrammeService ProgService
 @inject GamificationDbService GamificationDbService
 @inject ProfileService profileService
-
+@inject SupabaseService2 SupabaseService
 <div class="app-main">
     <div class="section-header d-flex justify-content-between align-items-center">
         📊 Statistiques
@@ -88,6 +89,9 @@
 
     protected override async Task OnInitializedAsync()
     {
+
+        var restored = await SupabaseService.LoadSessionAsync();
+        Console.WriteLine($"🟢 Session restaurée : {restored}");
         entries = await PoidsService.GetEntriesAsync();
         Console.WriteLine($"✅ Analyse loaded entries : {entries.Count}");
         gamificationDbModel = await GamificationDbService.GetOrCreateGamificationAsync();
